Sun Sep  7 15:11:08 2003  Joern Thyssen  <jth@gnubg.org>

	* external.c (CommandExternal), play.c (ComputerTurn): yet another
	attempt to fix external play.

Sun Sep  7 10:35:46 2003  Joern Thyssen  <jth@gnubg.org>

	Revert "Sat Sep  6 11:35:32 2003".

	* drawboard.c, boardpos.c, boardpos.h, gtkboard.c, export.c:
	revert checkin.

Sat Sep  6 18:06:51 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (HintChequer): Message synch with play.c.
	Replace "Considering moves" with "Considering move".

Sat Sep 6 16:14:58 GMT 2003   Jim Segrave <jes@jes-2.demon.nl>

	* play.c - try to improve distinguishing cube & chequer play
	  error flags

Sat Sep  6 15:07:31 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkrace.c, show.c:	Small improvements in output of race stuff and
	fixes to some bugs in gtkrace.
	(reported by Chris D. Yep)

Sat Sep  6 14:24:54 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintCubeAnalysisTable): fix typo.
	(reported by Martin Krainer)

Sat Sep  6 11:35:32 2003  Joern Thyssen  <jth@gnubg.org>

	Align the FIBSBoard routines to the FIBS board spec.
	This should fix Kees' external player problems.

	* drawboard.c (FIBSBoard): write correct value for "doubled".
	* boardpos.c (CubePosition): value of "doubled" changed according to
	specs. Change all callers.
	* export.c (GenerateImage): do.
	* gtkboard.c (cube_position, board_set): do.

Fri Sep 05 22:57:49 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* backgammon.h, play.c (getFinalScore): new function
	* gtkgame.c (AddNavigation): give final score or none for overall stats
	(reported by Martin Janke)
	* gtkgame.c (GTKDumpStatcontext): #ifdef unused variable

Fri Sep  5 22:46:12 2003  Joern Thyssen  <jth@gnubg.org>

	* matchequity.c (InitMatchEquity):  extend the post Crawford match
	equty table from n - 1 as the  post Crawford table of a n match equity
	table might not include the post Crawford equity at n-away, since the
	first "legal" post Crawford score is n-1.
